@@ -45,7 +45,7 @@ public class MilestonesPanel : PseudoScreen {
         milestonesWidget.Build(gui);
         gui.AllocateSpacing(2f);
         gui.BuildText("For your convenience, YAFC will show objects you DON'T have access to based on this selection", TextBlockDisplayStyle.WrappedText);
-        gui.BuildText("These are called 'Milestones'. By default all science packs are added as milestones, but this does not have to be this way! " +
+        gui.BuildText("These are called 'Milestones'. By default all science packs and locations are added as milestones, but this does not have to be this way! " +
                       "You can define your own milestones: Any item, recipe, entity or technology may be added as a milestone. For example you can add advanced " +
                       "electronic circuits as a milestone, and YAFC will display everything that is locked behind those circuits", TextBlockDisplayStyle.WrappedText);
         using (gui.EnterRow()) {
