@@ -19,6 +19,7 @@ Version:
 Date:
     Features:
         - Add dependency information for tree and resource spawns, fluid pumping, and some asteroid mining.
+        - (SA) Locations (except nauvis) are now part of the default milestone list.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.3.1
 Date: November 10th 2024
